doc: add producs swagger documentation
